# w2-crud/app.js
@@ -1,10 +1,12 @@
+"use strict"
+
 const express = require("express");
 const app = express();
 const port = 3000;
 app.use(express.json());
-const swaggerUi = require('swagger-ui-express')
-const swaggerDocument = require('./swagger.json')
-app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+const swaggerUi = require("swagger-ui-express");
+const swaggerDocument = require("./swagger.json");
+app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const log = console.log;
 
@@ -13,6 +15,7 @@ let tasks = [
   { id: 2, title: "eat", done: false },
   { id: 3, title: "bath", done: false },
 ];
+let idCount = 3;
 
 app.get("/health", (req, res) => {
   res.json({ status: "ok" });
@@ -23,14 +26,14 @@ app.get("/", (req, res) => {
 });
 
 app.get("/tasks", (req, res) => {
-  res.status(201).json(tasks);
+  res.status(200).json(tasks);
 });
 
 app.get("/tasks/:id", (req, res) => {
-  const selectedTask = tasks.filter((task) => task.id == req.params.id);
+  const selectedTask = tasks.find((task) => task.id == req.params.id);
 
-  if (selectedTask.length === 0) {
-    res.status(404).json({ error: "Task 99 not found" });
+  if (! selectedTask) {
+    res.status(404).json({ "error": `id ${req.params.id} not found` });
   } else {
     res.status(200).json(selectedTask);
   }
@@ -40,17 +43,21 @@ app.post("/tasks", (req, res) => {
   const newTask = req.body;
 
   if (Object.keys(newTask).length == 0) {
-    res.status(404).json({ error: "Bad request body" });
-    return;
-  } else if (newTask["title"].length == 0) {
-    res.status(400).json({ error: "Title cannot be empty" });
+    res.status(400).json({ error: "Bad request body" });
     return;
   }
+  if (typeof (newTask['title']) != 'string' || newTask['title'].trim().length == 0 ){
+	res.status(400).json({"error": "Invalid Title"})
+	return
+  }
+  let updatedTask = { id: idCount + 1, title: newTask["title"].trim(), done: false };
 
-  tasks.push({ id: tasks.length + 1, title: newTask["title"], done: false });
-  res.status(201).json({ "created task ": tasks.length - 1 });
+  tasks.push(updatedTask);
+  idCount += 1;
+  res.status(201).json(updatedTask);
 });
 
+// i decide to use PUT and auto set done to true if it exist in the request body
 app.put("/tasks/:id", (req, res) => {
   let updatedTask = req.body;
 
@@ -62,14 +69,23 @@ app.put("/tasks/:id", (req, res) => {
     return;
   }
 
-  let titles = Object.keys(updatedTask);
+  let titles = ["title"];
 
-  tasks.map((task) => {
+  tasks.find((task) => {
     if (task.id == req.params.id) {
-      for (item of titles) {
+		if (Object.hasOwn(updatedTask, "done")) {
+			task["done"] = true
+		} else {
+			task["done"] = false
+		}
+      for (const item of titles) {
+		if ( typeof (updatedTask[item]) != 'string' || updatedTask[item].trim().length == 0 ) {
+			res.status(400).json({"error": "Title cannot be empty"})
+			return
+		}
         task[item] = updatedTask[item];
       }
-	  res.status(201)
+      res.status(200).json(task);
     }
   });
 });
@@ -80,9 +96,9 @@ app.delete("/tasks/:id", (req, res) => {
     return;
   }
   tasks = tasks.filter((task) => task.id != req.params.id);
-  res.status(204).json({});
+  res.status(204).end();
 });
 
 app.listen(port, () => {
-  console.log(`Example app listening on port ${port}!`);
+  console.log(`App listening on port ${port}`);
 });
